--- a/index.html
+++ b/index.html
@@ -269,9 +269,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/category.js"></script>
-	<script src="js/color.js"></script>
-	<script src="js/link.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
