--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Sport's complex</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -269,7 +269,9 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/script.js"></script>
+	<script src="js/category.js"></script>
+	<script src="js/color.js"></script>
+	<script src="js/link.js"></script>
 </body>
 
 </html>
